update driver factory